--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "agi-calculator",
+  "homepage": "https://davidveksler.github.io/AGI-Calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,7 +29,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "tailwindcss -i ./src/index.css -o ./src/tailwind.css"
+    "postinstall": "tailwindcss -i ./src/index.css -o ./src/tailwind.css",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +53,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10"
   }
