--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "numeral": "^2.0.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
